--- a/mac_textpad/Cargo.toml
+++ b/mac_textpad/Cargo.toml
@@ -8,3 +8,6 @@ anyhow = "1.0.100"
 eframe = "0.33.0"
 rfd = "0.15.4"
 egui = "0.33.0" 
+livekit = "0.7.24"
+tokio = "1.48.0"
+reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
