--- a/mac_textpad/Cargo.toml
+++ b/mac_textpad/Cargo.toml
@@ -14,3 +14,5 @@ reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
 jsonwebtoken = { version = "10", features = ["rust_crypto"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio-tungstenite = "0.28.0"
+tungstenite = "0.28.0"
