--- a/livekit_client/.env
+++ b/livekit_client/.env
@@ -5,4 +5,5 @@
 
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_SECRET=devsecret
-LIVEKIT_URL=http://209.38.105.89:7880
+LIVEKIT_URL=127.0.0.1:7880
+# LIVEKIT_URL=http://209.38.105.89:7880
