--- a/mac_textpad/Cargo.toml
+++ b/mac_textpad/Cargo.toml
@@ -20,3 +20,22 @@ livekit-api = "0.4.9"
 dotenv = "0.15"
 env_logger = "0.11.8"
 log = "0.4.28"
+
+
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.aarch64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "link-args=-ObjC"]
+
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "link-args=-ObjC"]
+
+[target.aarch64-apple-ios]
+rustflags = ["-C", "link-args=-ObjC"]
+
+[target.aarch64-apple-ios-sim]
+rustflags = ["-C", "link-args=-ObjC"]
