--- a/editor/.env
+++ b/editor/.env
@@ -1,9 +1,3 @@
-# LIVEKIT_API_KEY=APIArE8e5SZrA5J
-# LIVEKIT_API_SECRET=r1vnQcZcahVLaH1PGorLWtUdO6w9eKZouhcxZQm23YC
-# LIVEKIT_URL=https://inzynierka-28c03xlk.livekit.cloud
-
-
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_SECRET=devsecret
-LIVEKIT_URL=127.0.0.1:7880
-# LIVEKIT_URL=http://209.38.105.89:7880
+LIVEKIT_URL=http://209.38.105.89:7880
